# pdf2md

./: .gitignore  README.md  pdf2md.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
assets/: pdf2md.icns
packaging/: pdf2md.desktop
pdf2md/: __init__.py  __main__.py  converter.py  downloader.py  gui.py  icons.py  theme.py
scripts/: build_macos.sh  render_logo.py  smoke_test.py
